# poc-pdf-to-md

./: .env.example  .gitignore  .pylintrc  README.md  README_zhtw.md  pyproject.toml
docs/: cd_pdf_to_md.puml  pdf-to-md-with-images-seq.puml  uc_pdf_to_md_main.puml
docs-ai/: 00_AI_READ_FIRST.md
docs-ai/00_System_View/: 00_AI_READ_FIRST.md  Tech_Stack.md
docs-ai/01_Requirements/: 00_AI_READ_FIRST.md  PRD.md  Use_Case_Diagram.puml
docs-ai/01_Requirements/Stories/: 00_AI_READ_FIRST.md
docs-ai/03_Cross_Cutting_Scenarios/: 00_AI_READ_FIRST.md  Main_Flow.puml
docs-ai/04_Component_Designs/: 00_AI_READ_FIRST.md
docs-ai/04_Component_Designs/backend/: 00_AI_READ_FIRST.md
docs-ai/04_Component_Designs/backend/core/: 00_AI_READ_FIRST.md  Class_Diagram.puml
docs-ai/04_Component_Designs/frontend/: 00_AI_READ_FIRST.md
docs-ai/05_Principles/: 00_AI_READ_FIRST.md  Database_Schema_Design_Principles.md
docs-ai/05_Principles/ADR/: 00_AI_READ_FIRST.md
docs-ai/06_Development_Records/: 00_AI_READ_FIRST.md
docs-ai/06_Development_Records/plans/: 00_AI_READ_FIRST.md  Legacy_Plan_Status.md
docs-ai/06_Development_Records/tickets/: 00_AI_READ_FIRST.md
docs-ai/06_Development_Records/worklogs/: 00_AI_READ_FIRST.md
prompts/: phase2_page_to_md.md
src/poc_pdf_to_md/: __init__.py  cli.py  engine.py  gemini_client.py  image_handler.py  parse_result.py  pdf_parser.py
tests/: __init__.py  test_cli.py  test_engine.py  test_image_handler.py  test_parse_result.py  test_pdf_parser.py  test_pdf_parser_fontsize.py  test_phase2.py
(+3 files in other folders)
